# eventide

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: basic.py  layered_architecture.py
scripts/: bump_version.py
src/eventide/: __init__.py
src/eventide/core/: __init__.py  descriptor.py  errors.py  signal.py  types.py
tests/core/: test_descriptor.py  test_disconnect.py  test_error_policy.py  test_lifecycle.py  test_signal.py
tests/public/: test_integration.py
